<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:background="@drawable/blue_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:fontFamily="@font/abeezee"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        android:id="@+id/textview_two_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/style_textview"
        android:text="@string/level"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:fontFamily="@font/abeezee"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        android:layout_below="@+id/textview_two_level"
        android:id="@+id/textview_two_topic"
        android:background="@drawable/style_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/topic"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:fontFamily="@font/abeezee"
        android:layout_marginTop="100dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"
        android:background="@drawable/style_textview"
        android:layout_below="@+id/textview_two_topic"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:id="@+id/textview_two_russian_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/russian_word"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35sp">

    </TextView>

    <EditText
        android:padding="5dp"
        android:textAlignment="center"
        android:textSize="25sp"
        android:imeOptions="actionSend"
        android:inputType="text"
        android:fontFamily="@font/abeezee"
        android:hint="@string/hint_translation"
        android:id="@+id/edittext_two_answer"
        android:layout_marginTop="50dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"
        android:background="@drawable/style_textview"
        android:layout_below="@+id/textview_two_russian_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </EditText>

    <Button
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:textAlignment="center"
        android:fontFamily="@font/abeezee"
        android:textColor="@color/black"
        android:background="@drawable/style_button"
        android:textSize="25sp"
        android:id="@+id/button_two_answer"
        android:layout_marginTop="50dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"
        android:layout_below="@+id/edittext_two_answer"
        android:text="@string/answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Button>



</RelativeLayout>