<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/blue_background"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textview_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/style_textview"
        android:fontFamily="@font/abeezee"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:text="@string/results"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold">

    </TextView>

    <androidx.cardview.widget.CardView
        android:layout_below="@id/textview_results"
        app:cardCornerRadius="15dp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:background="@drawable/style_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:paddingTop="15dp"
                android:paddingBottom="5dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:fontFamily="@font/abeezee"
                android:textSize="35sp"
                android:text="@string/result_first_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>

            <LinearLayout
                android:paddingTop="15dp"
                android:paddingBottom="3dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textview_result_percent"
                    android:paddingEnd="3dp"
                    android:textStyle="bold"
                    android:text="@string/n"
                    android:textColor="@color/black"
                    android:fontFamily="@font/abeezee"
                    android:textSize="80sp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                </TextView>

                <TextView
                    android:paddingStart="3dp"
                    android:textStyle="bold"
                    android:text="%"
                    android:textColor="@color/black"
                    android:fontFamily="@font/abeezee"
                    android:textSize="80sp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                </TextView>

            </LinearLayout>

            <Button
                android:background="@drawable/style_button"
                android:textColor="@color/black"
                android:id="@+id/button_result_redo"
                android:layout_marginStart="45dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="45dp"
                android:textSize="20sp"
                android:text="@string/redo_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </Button>

            <Button
                android:id="@+id/button_result_next"
                android:background="@drawable/style_button_transparent"
                android:textColor="@color/black_transparent"
                android:layout_marginStart="45dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="45dp"
                android:textSize="20sp"
                android:text="@string/next_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </Button>

            <Button
                android:id="@+id/button_result_back"
                android:background="@drawable/style_button"
                android:textColor="@color/black"
                android:layout_marginStart="45dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="45dp"
                android:textSize="20sp"
                android:text="@string/go_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </Button>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>