<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_marginTop="140dp"
    android:layout_marginBottom="130dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:scaleType="centerCrop"
    android:layout_gravity="center"
    android:id="@+id/dialog_window"
    android:background="@drawable/dialog_dark"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:background="@drawable/style_textview"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/abeezee"
                android:paddingStart="10dp"
                android:paddingEnd="3dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:text="@string/topic_r"
                android:textColor="@color/black"
                android:textSize="40sp">

            </TextView>

            <TextView
                android:id="@+id/textview_dialog_topic_index"
                android:textStyle="bold"
                android:fontFamily="@font/abeezee"
                android:layout_weight="1"
                android:paddingBottom="3dp"
                android:paddingTop="3dp"
                android:paddingStart="3dp"
                android:paddingEnd="10dp"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:text="@string/n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/style_textview"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_dialog_topic_eng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/abeezee"
                android:paddingTop="8dp"
                android:text="@string/topic"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/textview_dialog_topic_rus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/abeezee"
                android:paddingBottom="8dp"
                android:text="@string/topic_rus"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="35sp">

            </TextView>

        </LinearLayout>

        <Button
            android:textStyle="bold"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:textAlignment="center"
            android:fontFamily="@font/abeezee"
            android:background="@drawable/style_textview"
            android:id="@+id/button_dialog_next"
            android:text="@string/next"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Button>

        <Button
            android:textStyle="bold"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:textAlignment="center"
            android:fontFamily="@font/abeezee"
            android:background="@drawable/style_textview"
            android:layout_marginBottom="20dp"
            android:id="@+id/button_dialog_back"
            android:text="@string/go_back"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Button>

    </LinearLayout>

</RelativeLayout>