<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@drawable/blue_background"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:fontFamily="@font/abeezee"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        android:id="@+id/textview_one_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/style_textview"
        android:text="@string/level"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:fontFamily="@font/abeezee"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        android:layout_below="@+id/textview_one_level"
        android:id="@+id/textview_one_topic"
        android:background="@drawable/style_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/topic"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold">

    </TextView>

    <LinearLayout
        android:id="@+id/textview_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_one_topic"
        android:layout_marginStart="65dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="65dp"
        android:background="@drawable/style_textview"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_one_english_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abeezee"
            android:paddingTop="6dp"
            android:text="@string/english_word"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35sp">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/equals_sign"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35sp">

        </TextView>

        <TextView
            android:id="@+id/textview_one_russian_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abeezee"
            android:paddingBottom="6dp"
            android:text="@string/russian_word"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35sp">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textview_question"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="65dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="150dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="12dp"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:background="@drawable/style_image"
                android:src="@drawable/true_basic"
                android:id="@+id/img_true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:scaleType="centerCrop">

            </ImageView>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="12dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:background="@drawable/style_image"
                android:src="@drawable/false_basic"
                android:id="@+id/img_false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:scaleType="centerCrop">

            </ImageView>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</RelativeLayout>